[gd_scene load_steps=13 format=2]

[ext_resource path="res://UI/right-button.png" type="Texture" id=1]
[ext_resource path="res://UI/TileSelectorModal.gd" type="Script" id=2]
[ext_resource path="res://UI/game_theme.tres" type="Theme" id=3]
[ext_resource path="res://UI/item-box.png" type="Texture" id=4]
[ext_resource path="res://UI/left-button.png" type="Texture" id=5]
[ext_resource path="res://UI/close-button.png" type="Texture" id=6]
[ext_resource path="res://UI/buy-button.png" type="Texture" id=7]
[ext_resource path="res://UI/ClickableButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://UI/equipment.png" type="Texture" id=10]
[ext_resource path="res://UI/visual-queue.png" type="Texture" id=11]

[sub_resource type="Theme" id=1]

[sub_resource type="StreamTexture" id=2]
load_path = "res://.import/disabled-button.png-c0385e3c98043f2caa4e495b905f703a.stex"

[node name="TileSelectorModal" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="SelectionPanel" type="Control" parent="."]
margin_right = 64.0
margin_bottom = 64.0
theme = SubResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="SelectionPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -36.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CloseButton" parent="SelectionPanel/Panel" instance=ExtResource( 9 )]
margin_left = 53.0
margin_top = -3.0
margin_right = 60.0
margin_bottom = 4.0
texture = ExtResource( 6 )

[node name="LeftButton" parent="SelectionPanel/Panel" instance=ExtResource( 9 )]
margin_left = 4.0
margin_top = 4.0
margin_right = 11.0
margin_bottom = 14.0
texture = ExtResource( 5 )

[node name="SelectorContour" type="TextureRect" parent="SelectionPanel/Panel"]
margin_left = 13.0
margin_top = 4.0
margin_right = 23.0
margin_bottom = 14.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TileSprite" type="Sprite" parent="SelectionPanel/Panel"]
position = Vector2( 14, 5 )
texture = ExtResource( 10 )
centered = false
hframes = 12

[node name="VisualQueue" type="Sprite" parent="SelectionPanel/Panel"]
position = Vector2( 4, 17 )
texture = ExtResource( 11 )
centered = false
vframes = 12

[node name="RightButton" parent="SelectionPanel/Panel" instance=ExtResource( 9 )]
margin_left = 25.0
margin_top = 4.0
margin_right = 32.0
margin_bottom = 14.0
texture = ExtResource( 1 )

[node name="AcceptButton" parent="SelectionPanel/Panel" instance=ExtResource( 9 )]
margin_left = 37.0
margin_top = 16.0
margin_right = 61.0
margin_bottom = 25.0
texture = ExtResource( 7 )

[node name="ItemPrice" type="Label" parent="SelectionPanel/Panel/AcceptButton"]
margin_left = -1.0
margin_top = -4.0
margin_right = 25.0
margin_bottom = 13.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "OK"
align = 1
uppercase = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="DisabledButton" type="TextureRect" parent="SelectionPanel/Panel"]
visible = false
margin_left = 34.0
margin_top = 37.0
margin_right = 58.0
margin_bottom = 50.0
texture = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemPrice" type="Label" parent="SelectionPanel/Panel/DisabledButton"]
margin_left = -1.0
margin_top = -2.0
margin_right = 25.0
margin_bottom = 15.0
custom_colors/font_color = Color( 0.882353, 0.882353, 0.882353, 1 )
text = "$200"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuantityLabel" type="Label" parent="SelectionPanel/Panel"]
margin_left = 38.0
margin_right = 60.0
margin_bottom = 17.0
text = "0/3"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="click" from="SelectionPanel/Panel/LeftButton" to="." method="_on_LeftButton_click"]
[connection signal="click" from="SelectionPanel/Panel/RightButton" to="." method="_on_RightButton_click"]
